# dummy-snn

./: .gitignore  optimize_hyperparams.ipynb  pyproject.toml  requirements.txt  train_if_layer.ipynb  train_if_multilayer.ipynb  train_if_neuron.ipynb  visualize_data.ipynb
applications/: benchmark.py  common.py  data_view.ipynb  default_hyperparams.py  paper_hyperparams.py  parallel.py  search.py
applications/cached_greedy_optimization/: __main__.py  compare_orderings.py  optimize.py
applications/conv_learning/: evaluate.py  sweep.py  train.py
applications/conv_threshold_optimization/: README.md  evaluate.py  optimize.py  train.py
applications/datasets/: __init__.py  base.py  cifar10.py  cifar10_patches.py  cifar10_whitened.py  fashion_mnist.py  fer2013.py  generate_mnist.py  generate_processed.py  mnist.py  mnist_subset.py
applications/deep_linear/: activity_threshold.py  apply_pbtr.py  benchmark.py  exp0_params_establish.py  exp0_quick_eval.py  exp1_comp_only.py  exp2_comp_t_obj.py  exp3_pbtr.py  exp4_control.py  exp4_uniform_control.py  exp5_alternatives.py  find_hyperparams.py  model.py  percentile_threshold.py  plot_comparison.py  progress_callbacks.py  random_thresholds.py  sweep_post_training.py  sweep_thresholds.py  threshold_transform.py  train.py  training_plots.py  uniform_thresholds.py  visualize_weights.py  weight_threshold.py
applications/init_cond_research/: compute_spike_stats.py  train_models.py
applications/single_layer/: evaluate.py  model.py  train.py  (+3 more)
benchmarks/: bench_classifiers.py
dataloaders/: __init__.py  dataloader.py  mnist_spikes.py
datasets/: mnist.py
examples/: importance_correlation.ipynb  optimize_hyperparams.ipynb  optimize_thresholds.ipynb  visualize_data.ipynb
preprocessing/: difference_of_gaussians.py  latency_encoding.py
scripts/: assert_datasets_downloaded.py  benchmark_pipeline.py  evaluate_with_threshold.py  post_train.py  threshold_gif.py  train_one_layer.py
spiking/: __init__.py  iterate_spikes.py  registry.py  spike.py  spike_convertor.py  spiking_module.py
visualization/: __init__.py  consts.py  images_visualization.py  spikes_visualization.py
(+151 files in other folders)
