[project]
name = "dummy-snn"
version = "0.1.0"
description = "Unsupervised convolutional spiking neural networks with STDP"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "scikit-learn>=1.6",
    "tqdm>=4.67",
    "torch>=2.5",
    "torchvision>=0.20",
    "seaborn>=0.13",
    "pillow>=10.1",
    "kagglehub>=1.0",
    "jupyter>=1.1.1",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.5",
    "torchvision>=0.20",
]
cuda = [
    "torch>=2.5",
    "torchvision>=0.20",
    "cuml-cu12>=26.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "black>=24.0",
    "ruff>=0.8",
]

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.uv]
default-groups = ["dev"]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
    ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cuda" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cuda" },
]
